// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`fileSnapshot basic: data1.json 1`] = `
"{
  "name": "test data",
  "value": "somethings",
  "array": [
    "this is an array",
    "this is an array",
    "this is an array",
    "this is an array"
  ],
  "object": {
    "key": "value",
    "key2": "value2",
    "key3": "value3",
    "key4": "value4"
  }
}
"
`;

exports[`fileSnapshot with desensitize: data1.json 1`] = `
"{
  "name": "test data",
  "value": "somethings",
  "array": [
    "this is an array",
    "this is an array",
    "this is an array",
    "this is an array"
  ],
  "object": {
    "key": "value",
    "key-two": "value-two",
    "key-three": "value-three",
    "key-four": "value-four"
  }
}
"
`;
